<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polibatam.mtios.gasdetector.MainActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:text="@string/instruction" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#90909090"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20pt"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_icon_settings"
                android:layout_gravity="center"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:text="1"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textSize="7pt"
                android:layout_gravity="center"
                android:text="@string/firststep" />

        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#90909090"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20pt"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_icon_register"
                android:layout_gravity="center"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:text="2"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:textSize="7pt"
                android:text="@string/secondstep" />

        </LinearLayout>

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#90909090"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_icon_alarm"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:text="3"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:textSize="7pt"
                android:text="@string/thirdstep" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_list_button"
                android:id="@+id/listButton"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>